tests/errors/syntax/dangling-binary-op.fn
---
Description: Dangling binary operator with no right operand
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var a = 5 +
        return 0
    }
}
